# scryfall-cache-microservice

./: .dockerignore  .env.example  .gitignore  AUTOCOMPLETE_IMPLEMENTATION.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  PAGINATION_IMPLEMENTATION_STATUS.md  PAGINATION_QUICKREF.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_INDEXES.md  PHASE_2_QUICKREF.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SQLITE_BACKEND.md  TD_USAGE.md  TODO.md  deny.toml  docker-compose.yml  package.json
.cargo/: config.toml
admin-panel/: package-lock.json  package.json  vite.config.ts
admin-panel/src/: App.css  App.tsx
clients/: README.md
clients/typescript/: README.md  index.ts  package.json  schema.d.ts
docs/: cargo-build-optimization.md
examples/: generate_openapi.rs
migrations/: 001_initial_schema.sql  002_fix_cmc_type.sql  003_add_performance_indexes.sql
scripts/: benchmark-indexes-v2.sh  benchmark-indexes.sh  ci.sh  generate-api-client.js  generate-api-types.js  generate-openapi.sh  security-scan.sh  test-autocomplete.sh  test-pagination.sh  test-sqlite-memory.sh
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  openapi.rs  routes.rs
src/api/middleware/: logging.rs  mod.rs
src/background/: bulk_refresh.rs  mod.rs
src/cache/: manager.rs  mod.rs  redis.rs
src/circuit_breaker/: mod.rs  state.rs
src/db/: backend.rs  instrumented.rs  mod.rs  queries.rs  schema.rs
src/db/postgres/: connection.rs  mod.rs  queries.rs
src/db/sqlite/: connection.rs  mod.rs  queries.rs
src/errors/: codes.rs  mod.rs  response.rs
src/graphql/: mod.rs  schema.rs  types.rs
src/metrics/: middleware.rs  mod.rs  registry.rs
src/models/: card.rs
src/query/: executor.rs  limits.rs  mod.rs  parser.rs  validator.rs
src/scryfall/: bulk_loader.rs  client.rs  mod.rs  rate_limiter.rs
src/utils/: hash.rs
tests/: api_integration_tests.rs
