[package]
name = "scryfall-cache"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = ["sqlx"]
sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]
redis_cache = ["redis"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }

# Database - SQLite
rusqlite = { version = "0.31", features = ["bundled", "uuid", "serde_json", "chrono"], optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "0.24", optional = true }

# Cache - Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Environment variables
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
flate2 = "1.0"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# GraphQL
async-graphql = { version = "7", features = ["uuid", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "scryfall_cache"
path = "src/lib.rs"

[[bin]]
name = "scryfall-cache"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
